[package]
name = "oracle"
version = "1.2.0"
authors = ["Interlay Ltd"]
edition = "2021"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.1.5", default-features = false, features = ["derive", "max-encoded-len"] }
scale-info = { version = "2.2.0", default-features = false, features = ["derive"] }

# Substrate dependencies
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30", default-features = false }
sp-arithmetic = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30", default-features = false }

frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30", default-features = false }
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30", default-features = false, optional = true }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30", default-features = false }

# Parachain dependencies
security = { path = "../security", default-features = false }
primitives = { package = "interbtc-primitives", path = "../../primitives", default-features = false }
staking = { path = "../staking", default-features = false }
currency = { path = "../currency", default-features = false }
pallet-traits = { path = '../traits', default-features = false }

[dev-dependencies]
mocktopus = "0.7.0"
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30", default-features = false }

# Orml dependencies
orml-tokens = { git = "https://github.com/open-web3-stack/open-runtime-module-library", rev = "ae13a54dbc1a654df0e2d5e9dc18582b62716365", default-features = false }
orml-traits = { git = "https://github.com/open-web3-stack/open-runtime-module-library", rev = "ae13a54dbc1a654df0e2d5e9dc18582b62716365", default-features = false }

[features]
default = ["std"]
std = [
    "codec/std",

    "sp-io/std",
    "sp-core/std",
    "sp-std/std",
    "sp-runtime/std",
    "sp-arithmetic/std",

    "frame-support/std",
    "frame-system/std",
    "frame-benchmarking/std",
    "pallet-timestamp/std",

    "security/std",
    "staking/std",
    "currency/std",
    "primitives/std",
]
runtime-benchmarks = [
	"frame-benchmarking",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",

	"pallet-timestamp/runtime-benchmarks",
]
