[package]
name = "priority-map"
version = "0.1.0"
authors = ["Dominik Harz <dominik@interlay.io>"]
edition = "2018"

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
	'sp-std/std',
]

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.0.0'

[dependencies.frame-support]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '3e651110aa06aa835790df63410a29676243fc54'
version = '2.0.0'

[dependencies.sp-std]
default-features = false
version = '2.0.0'
git = 'https://github.com/paritytech/substrate.git'
rev = '3e651110aa06aa835790df63410a29676243fc54'
